cabal-version:       >=1.10
name:                trolleys
version:             0.1.0.0
synopsis:            Haskell program to schedule trolleys and shifts randomly!
description:         Please see README.md
bug-reports:         https://github.com/kutyel/trolleys/issues
license:             MIT
license-file:        LICENSE
author:              Flavio Corpa
maintainer:          flaviocorpa@gmail.com
copyright:           2019 © Flavio Corpa
category:            Random
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable trolleys
  main-is:             Main.hs
  default-language:    GHC2021
  build-depends:       base >=4.12
                     , aeson
                     , bytestring
                     , random
                     , MonadRandom
                     , text
                     , yaml
